# cpp_ants

./: CMakeLists.txt  build.sh
include/engine/ecs/: component.hpp  component_array.hpp  component_manager.hpp  component_registry.hpp  entity.hpp  entity_manager.hpp  signature.hpp
src/: main.cpp
src/engine/ecs/: entity_manager.cpp
tests/engine/ecs/: test_component_array.cpp  test_component_manager.cpp  test_component_registry.cpp  test_entity_manager.cpp
